- STREL-586 Improve germline multi-sample calling runtime
- STREL-576 Reduce demo installation size
- STREL-579 Add filtered depth rates as somatic SNV EVS features
- STREL-280 Retrain germline EVS
- STREL-260 Add validation on all input vcf reference fields
- STREL-566 Use indel error estimation by default for germline calling
- STREL-577 Fix bug creating negative size active regions
- STREL-553 Standardize somatic EVS features
- STREL-564 Add filter preventing low depth PASS calls
- STREL-567 Change readConfidentSupportThreshold to 0.51 
- STREL-524 Retrain germline EVS
- STREL-519 Fix callRegions option thread utilization
- STREL-459 Retain optimal soft-clipping for RNA analysis
- STREL-451 Enable somatic indel EVS and retrain somatic SNV EVS
- STREL-478 Change gVCF non-variant blocks to use mean depth
- STREL-469 Add RNAseq EVS models
- STREL-479 External candidate indels create active regions
- STREL-462 Do not penalize candidate SNVs in alignment scoring
- STREL-450 Add dinucs to indel error stats module
- STREL-465 Filter germline haplotypes with phasing error signature
- STREL-460 Do not assess indel candidacy in active regions if assembly fails
- STREL-454 Penalize for non-candidate indels in alignment scoring
- STREL-443 Remove old germline caller target BED file option
- STREL-178 Replace codon phaser with variant phaser
- STREL-356 Allow BED file to restrict variant calling regions
- STREL-392 Fix overlap del handling across segments
- STREL-405 Fix overcounting issue in error stats module 
- STREL-401 Remove read edge events from error stats module
- STREL-342 Use assembly to generate haplotypes in long active regions
- STREL-251 Enable automatic germline EVS calibration
- STREL-357 Add separate threshold for homref calls
v2.7.1
- STREL-336 Fix incorrect indel normalizations
- STREL-332 Revert to core somatic indel scoring with adjusted threshold
- STREL-331 Left-shift indels inside of active regions